--- a/fengong.html
+++ b/fengong.html
@@ -27,14 +27,7 @@
       </div>
       <!--/.navbar-header-->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="fengong.html">分工结果</a></li>
-          <li><a href="index.html">首 页</a></li>
-          <li><a href="intro.html">历史溯源</a></li>
-          <li><a href="fav.html">文化特征</a></li>
-          <li><a href="xinqinf.html">代表</a></li>
-          <li class="active"><a href="tell.html">分布地区</a></li>
-          <li><a href="baohu.html">传承保护</a></li>
+        <ul class="nav navbar-nav" >
         </ul>
       </div>
       <!--/.navbar-collapse-->
@@ -42,13 +35,18 @@
   </div>
   <div class="intr part2">
     <div class="container">
-      <h3 class="title">分工结果</h3>
-      <p class="IntroContent IntroContent2">何韵婷：首页  </p>
-      <p class="IntroContent IntroContent2">何智雯：历史溯源、文化特征</p>
-      <p class="IntroContent IntroContent2">霍佳静：代表</p>
-      <p class="IntroContent IntroContent2">朱心怡：分布地区</p>
-      <p class="IntroContent IntroContent2">杨诗婷：传承保护</p>
+      <h2 class="title">分工结果</h2>
+      <p class="IntroContent IntroContent2">何韵婷：首页      <li><a href="index.html">首 页</a></li>
+      <p class="IntroContent IntroContent2">何智雯：历史溯源、文化特征  <li><a href="intro.html">历史溯源</a></li><li><a href="fav.html">文化特征</a></li>
+      <p class="IntroContent IntroContent2">霍佳静：代表<li><a href="xinqinf.html">代表</a></li>
+      <p class="IntroContent IntroContent2">朱心怡：分布地区<li class="active"><a href="tell.html">分布地区</a></li>
+      <p class="IntroContent IntroContent2">杨诗婷：传承保护<li><a href="baohu.html">传承保护</a></li>
     </div>
+  </div>
+  <div class="footer">粤剧</div>
+</body>
+</html>
+</html>
   </div>
   <div class="footer">粤剧</div>
 </body>
