--- a/fengong.html
+++ b/fengong.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -23,7 +23,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
+         </button>
       </div>
       <!--/.navbar-header-->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -37,16 +37,13 @@
     <div class="container">
       <h2 class="title">分工结果</h2>
       <p class="IntroContent IntroContent2">何韵婷：首页      <li><a href="index.html">首 页</a></li>
-      <p class="IntroContent IntroContent2">何智雯：历史溯源、文化特征  <li><a href="intro.html">历史溯源</a></li><li><a href="fav.html">文化特征</a></li>
-      <p class="IntroContent IntroContent2">霍佳静：代表<li><a href="xinqinf.html">代表</a></li>
-      <p class="IntroContent IntroContent2">朱心怡：分布地区<li class="active"><a href="tell.html">分布地区</a></li>
-      <p class="IntroContent IntroContent2">杨诗婷：传承保护<li><a href="baohu.html">传承保护</a></li>
+      <p class="IntroContent IntroContent2">何智雯：历史溯源、传承保护  <li><a href="intro.html">历史溯源</a><li><a href="baohu.html">传承保护</a>
+      <p class="IntroContent IntroContent2">霍佳静：代表     <li><a href="xinqinf.html">代表</a></li>
+      <p class="IntroContent IntroContent2">杨诗婷：代表     <li><a href="xinqinf.html">代表</a></li>
+      <p class="IntroContent IntroContent2">朱心怡：分布地区、文化特征  <li class="active"><a href="tell.html">分布地区</a></li></li> </li><li><a href="fav.html">文化特征</a></li>
+  
+
     </div>
-  </div>
-  <div class="footer">粤剧</div>
-</body>
-</html>
-</html>
   </div>
   <div class="footer">粤剧</div>
 </body>
